# dayturn

./: .clang-format  .gitignore  .hgignore  .hgtags  BUILD_INSTRUCTIONS.MD  BuildParams  README  README.MD  README.md  autobuild.xml  build.sh
.hgpatchinfo/: RLVa.dep
doc/: contributions.txt  releasenotes-where.txt
etc/: message.xml
indra/: CMakeLists.txt  main-objc.mm
indra/cmake/: 00-Common.cmake  APR.cmake  Boost.cmake  BuildPackagesInfo.cmake  BuildVersion.cmake  CARes.cmake  CEFPlugin.cmake  CMakeLists.txt  Copy3rdPartyLibs.cmake  DeploySharedLibs.cmake  DragDrop.cmake  FMODEX.cmake  FMODSTUDIO.cmake  FindFMODEX.cmake  GStreamer010Plugin.cmake  Glui.cmake  Glut.cmake  GoogleBreakpad.cmake  Hunspell.cmake  JPEG.cmake  JsonCpp.cmake  LLAddBuildTest.cmake  LLCA.cmake  LLCommon.cmake  LLCoreHttp.cmake  LLMessage.cmake  LLPhysicsExtensions.cmake  LLPrimitive.cmake  LLSharedLibs.cmake  LibVLCPlugin.cmake  Linking.cmake  NDOF.cmake  OPENAL.cmake  OpenSSL.cmake  PNG.cmake  QuickTimePlugin.cmake  URIPARSER.cmake  Variables.cmake  ViewerMiscLibs.cmake  ZLIB.cmake  (+1 more)
indra/copy_win_scripts/: start-client.py
indra/linux_crash_logger/: llcrashloggerlinux.cpp
indra/llappearance/: llavatarappearance.cpp  llavatarappearance.h  llavatarappearancedefines.cpp  llavatarappearancedefines.h  llavatarjoint.cpp  llavatarjoint.h  llavatarjointmesh.cpp  lldriverparam.cpp  lldriverparam.h  lllocaltextureobject.cpp  llpolymorph.cpp  llpolymorph.h  llpolyskeletaldistortion.cpp  llpolyskeletaldistortion.h  lltexglobalcolor.cpp  lltexglobalcolor.h  lltexlayer.cpp  lltexlayer.h  lltexlayerparams.cpp  lltexlayerparams.h  llviewervisualparam.cpp  llwearable.cpp  llwearable.h  llwearabledata.cpp  llwearabledata.h  llwearabletype.cpp  llwearabletype.h
indra/llaudio/: CMakeLists.txt  llaudiodecodemgr.cpp  llaudioengine.cpp  llaudioengine.h  llaudioengine_fmodstudio.cpp  llaudioengine_openal.cpp  lllistener_fmodstudio.cpp  llstreamingaudio_fmodstudio.cpp  llstreamingaudio_fmodstudio.h  llvorbisencode.cpp
indra/llcharacter/: CMakeLists.txt  llbvhloader.cpp  llcharacter.cpp  llcharacter.h  lleditingmotion.cpp  lleditingmotion.h  llgesture.cpp  llgesture.h  llhandmotion.cpp  llhandmotion.h  llheadrotmotion.cpp  llheadrotmotion.h  lljoint.cpp  lljoint.h  lljointsolverrp3.cpp  llkeyframefallmotion.cpp  llkeyframefallmotion.h  llkeyframemotion.cpp  llkeyframemotion.h  llkeyframemotionparam.cpp  llkeyframemotionparam.h  llkeyframestandmotion.cpp  llkeyframestandmotion.h  llkeyframewalkmotion.cpp  llkeyframewalkmotion.h  llmotion.h  llmotioncontroller.cpp  llmotioncontroller.h  llpose.h  lltargetingmotion.cpp  lltargetingmotion.h  llvisualparam.cpp  llvisualparam.h
indra/llcommon/: CMakeLists.txt  StackWalker.cpp  StackWalker.h  indra_constants.cpp  indra_constants.h  linden_common.h  llallocator.cpp  llallocator.h  llapp.cpp  llapp.h  llapr.cpp  llapr.h  llassettype.cpp  llassettype.h  llbool.h  llcallbacklist.cpp  llchat.h  llcommon.cpp  llcoros.cpp  llcoros.h  lldependencies.h  llerror.cpp  llerror.h  llerrorcontrol.h  lleventcoro.cpp  lleventcoro.h  lleventfilter.cpp  lleventfilter.h  llevents.cpp  llevents.h  lleventtimer.h  llexception.cpp  llexception.h  llfasttimer.cpp  llfasttimer.h  llfile.h  (+52 more)
indra/llplugin/slplugin/: CMakeLists.txt  slplugin.cpp  slplugin_info.plist
indra/media_plugins/: CMakeLists.txt
indra/media_plugins/base/: CMakeLists.txt
indra/media_plugins/cef/: CMakeLists.txt  mac_volume_catcher.cpp  media_plugin_cef.cpp
indra/media_plugins/example/: CMakeLists.txt  media_plugin_example.cpp
indra/media_plugins/gstreamer010/: CMakeLists.txt  llmediaimplgstreamervidplug.cpp  media_plugin_gstreamer010.cpp
indra/media_plugins/libvlc/: CMakeLists.txt  media_plugin_libvlc.cpp
scripts/: packages-formatter.py
(+1783 files in other folders)
